--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 	height: 100vh;
 	width: 100%;
 	background-color: #D8C9D8;
+	font-size: 1em;
 }
 
 .container{
@@ -22,6 +23,8 @@ input{
 	outline: none;
 	background-color: #D8C9D8;
 }
+
+
 /*Header*/
 nav{
 	padding: 10px 0 10px 10px;
@@ -33,9 +36,10 @@ nav{
 	color: white;
 }
 
-/*Section*/
+/*mainPanel*/
 .mainPanel,
 .addPanel {
+	height: auto;
 	width: 70%;
 	margin: 0 auto;
 	padding: 40px 10px;
@@ -49,9 +53,7 @@ nav{
 .wrapper{
 	margin-bottom: 20px;
 }
-label{
-	font-size: 18px;
-}
+
 .mainPanel input,
 .addPanel textarea {
 	margin-left: 10px;
@@ -63,7 +65,9 @@ label{
 	background-color: #D8C9D8;
 }
 
-.createBtn {
+.createPoll,
+.addAnswer,
+.createQuestion {
 	padding: 10px 30px;
 	border: 2px solid #260026;
 	border-radius: 5px;
@@ -73,15 +77,31 @@ label{
 	cursor: pointer;
 }
 
-.createBtn:hover{
+.createPoll:hover{
 	transform: scale(1.01);
 	box-shadow: 1px 1px 10px rgba(0,0,0,.4)
 }
 
 /*Add panel*/
+
+.hidden{
+	display: none;
+}
 .addPanel{
-	margin-top: 20px;
+	padding: 20px 10px;
+	/*margin-top: 20px;*/
 	align-items: flex-start;
+}
+
+.addPanel h3{
+	align-self: center;
+	margin-bottom: 20px;
+}
+
+label[for^="question"]{
+	display: block;
+	margin-bottom: 10px;
+	font-size: 18px;
 }
 
 form,
@@ -89,13 +109,14 @@ form,
 	width: 100%;
 }
 
+form{
+	margin-bottom: 20px;
+}
 .addPanel textarea {
 	padding: 5px;
 	margin-left:0;
 	resize: none;
 	overflow: hidden;
-
-
 }
 
 .addPanel textarea span,
@@ -104,8 +125,12 @@ form,
 	background-color: #D8C9D8 !important;
 }
 
+.addPanel p {
+	font-size: 18px;
+}
+
 .addAnswer,
-.createAnswer{
+.createQuestion{
 	border: 2px solid black;
 	border-radius: 5px;
 	padding: 5px 10px;
@@ -115,13 +140,23 @@ form,
 	cursor: pointer;
 
 }
-
+.addPanel .fieldAnswer{
+	width: 100%;
+}
 .addPanel input {
 	width: 60%;
 	margin-top: 10px;
 	padding: 3px 5px;
 }
 
-.createAnswer{
+.createQuestion{
+	padding: 15px ;
 	align-self: center;
+}
+
+/*Preview panel*/
+.priviewPanel{
+	border-radius: 10px;
+	border: 3px solid #800080;
+	margin-left: 5px; 
 }
