--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -2,4 +2,31 @@
 	.mainPanel {
 		width: 90%;
 	}
+
+	.card .wrapper-qst{
+		text-align: justify-all;
+	}
+
+	.addPanel input {
+		width: 80%;
+	}
+}
+
+@media screen and (max-width: 620px){
+	#second {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.addPanel,
+	.previewPanel{
+		width: 99%;
+	}
+
+}
+
+@media screen and (max-width: 820px){
+	.addPanel input {
+		width: 80%;
+	}
 }
